--- a/color-gallery/index.html
+++ b/color-gallery/index.html
@@ -43,10 +43,17 @@
     <script>
         // Array of your images
         const images = [
-            "PLA_Red.png",
-            "PLA_Blue.png",
-            "PLA_Green.png",
-            "PLA_Yellow.png",
+            "PLA_Matte-Desert-Tan.png",
+            "PLA_Matte-Ice-Blue.png",
+            "PLA_Matte-Marine-Blue.png",
+            "PLA_Matte-Sakura-Pink.png",
+            "PLA_Mistletoe-Green.png",
+            "PLA_Sliver.png",
+            "PLA-Black.png",
+            "PLA-Magenta.png",
+            "PLA-Purple.png",
+            "PLA-White.png",
+            "PLA-Yellow.png"
             // Add more filenames here
         ];
 
