--- a/color-gallery/index.html
+++ b/color-gallery/index.html
@@ -49,11 +49,11 @@
             "PLA_Matte-Sakura-Pink.png",
             "PLA_Mistletoe-Green.png",
             "PLA_Sliver.png",
-            "PLA-Black.png",
-            "PLA-Magenta.png",
-            "PLA-Purple.png",
-            "PLA-White.png",
-            "PLA-Yellow.png"
+            "PLA_Black.png",
+            "PLA_Magenta.png",
+            "PLA_Purple.png",
+            "PLA_White.png",
+            "PLA_Yellow.png"
             // Add more filenames here
         ];
 
